--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
 						<div class="col l4 offset-l2 s12 wow bounceInUp" data-wow-delay=".5s">
 							<h3 class="white-text"><b>Other Links</b></h3>
 							<ul style="font-size: 20px;">
-								<li><a class="grey-text text-lighten-3" href="http://facebook.com/licosoftwares">Facebook</a></li>
-								<li><a class="grey-text text-lighten-3" href="http://github.com/licosoftwares">Github</a></li>
+								<li><a class="grey-text text-lighten-3" href="https://www.facebook.com/codelordz/">Facebook</a></li>
+								<li><a class="grey-text text-lighten-3" href="https://github.com/Code-Lordz">Github</a></li>
 								<li><a class="grey-text text-lighten-3" href="http://facebook.com/satheesh1997">Satheesh Kumar</a></li>
 							</ul>
 						</div>
